# app/Http/Controllers/UserController.php
@@ -17,10 +17,11 @@ class UserController extends Controller
     /**
      * @OA\Get(
      * path="/api/users",
-     * summary="get all users",
-     * description="Get user info",
+     * summary="Get all users active",
+     * description="Get all user information, only admins",
      * operationId="getAllUsers",
-     * tags={"auth"},
+     * tags={"users"},
+     * security={{"bearerAuth":{}}},
      * @OA\Response(
      *    response=200,
      *    description="Get users success",
@@ -33,7 +34,7 @@ class UserController extends Controller
      */
     public function index()
     {
-        $users = User::all();
+        $users = User::where('active', true);
         return response()->json([
             'status' => 'success',
             'users' => $users,
@@ -41,23 +42,82 @@ class UserController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * @OA\Get(
+     * path="/api/users/{id}",
+     * summary="Get user by id",
+     * description="Get any user info by id",
+     * operationId="getUserById",
+     * tags={"users"},
+     * security={{"bearerAuth":{}}},
+     * @OA\Property(property="id", type="integer"),
+     * @OA\Response(
+     *    response=200,
+     *    description="Get user success",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="status", type="string"),
+     *       @OA\Property(property="user", type="json"),
+     *     )
+     *    )
+     * )
      */
-    public function store(Request $request)
+    public function show($id)
     {
-        $user = Auth::user();
-        $id = $request->id;
+        $user = User::find($id)->where('active', 1);
 
-        if (!$user->isAdmin() && !$user->isSuperAdmin()) {
-            Log::error('Cannot edit another user: '. $user);
+        if (!$user) {
+            Log::error('Error requesting information by'. Auth::user() . ' of ' . $id);
             return response()->json([
                 'status' => 'error',
-                'message' => 'There is no possible to update another user',
+                'message' => 'There is no possible to get this user info',
             ], 401);
         }
+
+        Log::info('Requested information by'. Auth::user() . ' of ' . $id);
+        return response()->json([
+            'status' => 'success',
+            'user' => [
+                'name' => $user->name,
+                'email' => $user->email,
+            ],
+        ]);
+    }
+
+    /**
+     * @OA\Put(
+     * path="/api/users/update",
+     * summary="Update user",
+     * description="Update user, only admins",
+     * operationId="authUpdateUser",
+     * tags={"users"},
+     * security={{"bearerAuth":{}}},
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Pass user credentials",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="email", type="string", format="email", example="user1@mail.com"),
+     *       @OA\Property(property="password", type="string", format="password", example="PassWord12345"),
+     *       @OA\Property(property="name", type="string", format="string"),
+     *    ),
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="User Created succesfully",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="status", type="string"),
+     *       @OA\Property(property="message", type="string"),
+     *       @OA\Property(property="user", type="json")
+     *     )
+     *    )
+     * )
+     * )
+     */
+    public function update(Request $request, $id)
+    {
+        $request->validate([
+            'name' => 'required|string|max:100',
+            'email' => 'required|string|email|max:255|unique:users',
+            'password' => 'required|string|min:6',
+        ]);
 
         $user = User::whereId($id)->update($request->all());
 
@@ -72,70 +132,76 @@ class UserController extends Controller
         Log::info('Requested information by'. Auth::user() . ' of ' . $id);
         return response()->json([
             'status' => 'success',
-            'user' => $user,
+            'user' => [
+                'name' => $user->name,
+                'email' => $user->email,
+            ],
         ]);
     }
 
     /**
      * @OA\Get(
-     * path="/api/user/{id}",
-     * summary="users",
-     * description="Get user info",
-     * operationId="getUserById",
-     * tags={"auth"},
-     * @OA\Property(property="id", type="integer"),
+     * path="/api/users/getinfo",
+     * summary="Get user logged info",
+     * description="get Info from your User",
+     * operationId="authGetInfo",
+     * tags={"users"},
+     * security={{"bearerAuth":{}}},
      * @OA\Response(
      *    response=200,
-     *    description="Get user success",
+     *    description="Info shown succesfully",
      *    @OA\JsonContent(
      *       @OA\Property(property="status", type="string"),
-     *       @OA\Property(property="user", type="json"),
+     *       @OA\Property(property="user", type="json")
      *     )
      *    )
      * )
+     * )
      */
-    public function show($id)
+    public function getinfo()
     {
-        $user = User::find($id);
+        $user = Auth::user();
+        Log::info('Requested information by'. Auth::user() . ' of ' . $user->id);
 
-        if (!$user) {
-            Log::error('Error requesting information by'. Auth::user() . ' of ' . $id);
-            return response()->json([
-                'status' => 'error',
-                'message' => 'There is no possible to get this user info',
-            ], 401);
-        }
-
-        Log::info('Requested information by'. Auth::user() . ' of ' . $id);
         return response()->json([
             'status' => 'success',
-            'user' => $user,
+            'user' => [
+                'name' => $user-$name,
+                'email' => $user-$email,
+                'english_level' => $user-$english_level,
+                'knowledge' => $user-$knowledge,
+                'link_cv' => $user-$link_cv,
+            ],
         ]);
     }
 
     /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Delete(
+     * path="/api/users/destroy",
+     * summary="Delete user",
+     * description="Delete user logically",
+     * operationId="authDelete",
+     * tags={"users"},
+     * security={{"bearerAuth":{}}},
+     * @OA\Response(
+     *    response=200,
+     *    description="User deleted succesfully",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="status", type="string"),
+     *       @OA\Property(property="message", type="string")
+     *     )
+     *    )
+     * )
+     * )
      */
-    public function update(Request $request, $id)
+    public function destroy($id)
     {
-        $user = Selection::whereId($id)->update($request->all());
+        User::where('id', $id)
+            ->update(['active' => false]);
 
-        if (!$user) {
-            Log::error('Error requesting information by'. Auth::user() . ' of ' . $id);
-            return response()->json([
-                'status' => 'error',
-                'message' => 'There is no possible to get this user info',
-            ], 401);
-        }
-
-        Log::info('Requested information by'. Auth::user() . ' of ' . $id);
         return response()->json([
             'status' => 'success',
-            'user' => $user,
+            'message' => 'User deleted successfully',
         ]);
     }
 }
